@@ -5,6 +5,7 @@
  - Fix gnome_url_show
  - Make add work
  - Need a way to get all apps in the app registry
+ - Segfault when edit clicked and nothing selected
 
 CVS Surgery
  - Move file-types to gnome-control-center, rename ???
