@@ -1,5 +1,8 @@
 2002-01-11  Bradford Hovinen  <hovinen@ximian.com>
 
+	* mime-edit-dialog.c (populate_application_list): Use custom_line
+	for program_entry
+
 	* mime-type-info.c (mime_type_info_load): Read custom_line from
 	default_action
 	(mime_type_info_save): Set custom line through GnomeVFS app
